[gd_scene load_steps=19 format=3 uid="uid://ngofvgb0icyd"]

[ext_resource type="Texture2D" uid="uid://bvl0ovb44jxj8" path="res://assets/rush/Untitled43_20260105180103.png" id="1_7vgvk"]
[ext_resource type="Script" uid="uid://crtnsckq1cksi" path="res://scripts/objects/dna.gd" id="1_hdwnv"]
[ext_resource type="PackedScene" uid="uid://4wx5x4880fvr" path="res://scenes/objects/game_level_obj/rna_p.tscn" id="2_0aa6f"]
[ext_resource type="PackedScene" uid="uid://c7md4vxetlvi" path="res://scenes/minigames/find_promoter.tscn" id="2_bcsye"]
[ext_resource type="PackedScene" uid="uid://dcmteki0o3m78" path="res://scenes/utils/interaction_area.tscn" id="2_ovv37"]
[ext_resource type="PackedScene" uid="uid://cawrhllveiwm0" path="res://scenes/objects/game_level_obj/m_rna_object_minigame.tscn" id="2_yti1p"]
[ext_resource type="PackedScene" uid="uid://jn6q8r6a24nq" path="res://scenes/minigames/binding_minigame.tscn" id="3_ysat1"]
[ext_resource type="Texture2D" uid="uid://dwjeih7o4fhke" path="res://assets/rush/Untitled50_20260108181446.png" id="5_3opi6"]
[ext_resource type="PackedScene" uid="uid://dorrtahxg5r22" path="res://scenes/minigames/termination_minigame.tscn" id="5_gaeuq"]
[ext_resource type="PackedScene" uid="uid://cqr4w4eoyx67y" path="res://scenes/objects/game_level_obj/drop_areas/promoter_region.tscn" id="8_8thj8"]
[ext_resource type="Shader" uid="uid://divxqb1ff64oj" path="res://scripts/utils/shaders/outline.gdshader" id="8_e30b5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vgvk"]
size = Vector2(2715, 109)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrulv"]
shader = ExtResource("8_e30b5")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0
shader_parameter/width = 0.0010000000475

[sub_resource type="AtlasTexture" id="AtlasTexture_ovv37"]
atlas = ExtResource("1_7vgvk")
region = Rect2(955, 4080, 2804, 402)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdwnv"]
size = Vector2(2806, 195)

[sub_resource type="AtlasTexture" id="AtlasTexture_3opi6"]
atlas = ExtResource("1_7vgvk")
region = Rect2(4026, 1370, 305, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_yti1p"]
atlas = ExtResource("1_7vgvk")
region = Rect2(4089.7183, 496.4359, 231.89746, 296.20508)

[sub_resource type="Curve2D" id="Curve2D_3opi6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1187, 1, 0, 0, 0, 0, 1123, -3)
}
point_count = 2

[node name="dna" type="StaticBody2D" groups=["dna"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_hdwnv")
mRNA_scene = ExtResource("2_yti1p")
rna_polymerase_scene = ExtResource("2_0aa6f")
rna_spawn_position = Vector2(584, 441)
promoter_region_minigame = ExtResource("2_bcsye")
rna_polymerase_minigame = ExtResource("3_ysat1")
termination_minigame_scene = ExtResource("5_gaeuq")
tutorial_mode = true

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-56.999996, 124)
scale = Vector2(2.901, 1)
texture = ExtResource("5_3opi6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-28.5, 77.5)
shape = SubResource("RectangleShape2D_7vgvk")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.60784316)
material = SubResource("ShaderMaterial_xrulv")
texture = SubResource("AtlasTexture_ovv37")

[node name="InteractionArea" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("2_ovv37")]
sprite = NodePath("../Sprite2D")
label_name = "DNA"
action_name = "FIND PROMOTER"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-22, 87.5)
shape = SubResource("RectangleShape2D_hdwnv")

[node name="PROMOTER_REGION" parent="." instance=ExtResource("8_8thj8")]
position = Vector2(-1181, 7)

[node name="TerminationSite" type="Sprite2D" parent="."]
position = Vector2(1131.9998, 0)
texture = SubResource("AtlasTexture_3opi6")

[node name="RnaPolymerase" type="Sprite2D" parent="TerminationSite"]
texture = SubResource("AtlasTexture_yti1p")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_3opi6")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-1187, 1)
rotation = -0.0017316

[node name="mRNA_SPAWN_POINT" type="Marker2D" parent="."]
position = Vector2(3, 294)

[node name="RNAP_SPAWNPOINT" type="Marker2D" parent="."]
position = Vector2(-1170, 13)

[node name="dna-Start" type="Marker2D" parent="."]
position = Vector2(-1293, 13)

[node name="dna-End" type="Marker2D" parent="."]
position = Vector2(1262, 9)

[node name="TerminationMarker" type="Marker2D" parent="."]
position = Vector2(1266, 14)
